--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <!-- write your html -->
     <div class="title"><h2>tic tac toe</h2></div>
-    <div class="l-flex"><div class="choice choice-active" id="circle">○</div><div class="choice" id="cross">×</div></div>
+    <div class="l-flex"><div class="choice choice-active" id="circle">○</div><div class="choicegh-pages" id="cross">×</div></div>
     <div class="l-grid">
       <div class="l-grid-cell cell" id="cell1"></div>
       <div class="l-grid-cell cell" id="cell2"></div>
